<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.braveen.fit_health_app.BioPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/silver_background"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/BioPageTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/footlightmtlight"
                    android:padding="10dp"
                    android:text="Bio"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#0f0582"
                    android:textSize="40dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/FirstNameTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/calibri"
                        android:padding="8dp"
                        android:text="First Name"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/BioPageFirstNameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="120dp"
                        android:background="@android:color/transparent"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:fontFamily="@font/calibri"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColorHint="#000"
                        android:textSize="20dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/LastNameTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/calibri"
                        android:padding="8dp"
                        android:text="Last Name"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/BioPageLastNameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="120dp"
                        android:background="@android:color/transparent"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:fontFamily="@font/calibri"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColorHint="#000"
                        android:textSize="20dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/GenderTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/calibri"
                        android:padding="8dp"
                        android:text="Gender"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <Spinner
                        android:id="@+id/BioPageGenderTxt"
                        style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="120dp"
                        android:background="@android:color/transparent"></Spinner>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/AgeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/calibri"
                        android:padding="8dp"
                        android:text="Age"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/BioPageAgeTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="120dp"
                        android:background="@android:color/transparent"
                        android:digits="0123456789"
                        android:fontFamily="@font/calibri"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColorHint="#000"
                        android:textSize="20dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/HeightTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/calibri"
                        android:padding="8dp"
                        android:text="Height (cm)"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/BioPageHeightTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="120dp"
                        android:background="@android:color/transparent"
                        android:digits="0123456789."
                        android:fontFamily="@font/calibri"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColorHint="#000"
                        android:textSize="20dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/WeightTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/calibri"
                        android:padding="8dp"
                        android:text="Weight (kg)"
                        android:textColor="#000"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/BioPageWeightTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="120dp"
                        android:background="@android:color/transparent"
                        android:digits="0123456789."
                        android:fontFamily="@font/calibri"
                        android:inputType="number"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColorHint="#000"
                        android:textSize="20dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000000" />

                <Button
                    android:id="@+id/BioPageSaveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/blue_background"
                    android:clickable="true"
                    android:fontFamily="@font/segoepr"
                    android:onClick="SaveUserBio"
                    android:text="Save"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>