<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.braveen.fit_health_app.SignInPage">

    <LinearLayout
        android:paddingRight="18dp"
        android:paddingLeft="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/black_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/SignInLogoImg"
                    android:layout_width="240dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/exercise"/>

                <EditText
                    android:id="@+id/SigninPageEmailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:hint="Email"
                    android:fontFamily="@font/calibri"
                    android:textSize="22dp"
                    android:textColor="#fff"
                    android:textColorHint="#666"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/email"
                    android:layout_marginTop="35dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/SigninPagePasswordTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:hint="Password"
                        android:fontFamily="@font/calibri"
                        android:textSize="22dp"
                        android:textColor="#fff"
                        android:textColorHint="#666"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/lock"
                        android:layout_marginTop="10dp"/>

                    <Button
                        android:id="@+id/SigninPagePasswordEye"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/visibility_on"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:onClick="SigninPasswordVisibility"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db"/>

                <Button
                    android:id="@+id/SigninPageSigninBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_background"
                    android:fontFamily="@font/segoepr"
                    android:textSize="20dp"
                    android:text="Sign In"
                    android:textAllCaps="false"
                    android:textColor="#0f0582"
                    android:clickable="true"
                    android:layout_marginTop="40dp"
                    android:onClick="SigninUser"/>

                <Button
                    android:id="@+id/SigninPageSignupBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_background"
                    android:fontFamily="@font/segoepr"
                    android:textSize="20dp"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:clickable="true"
                    android:layout_marginTop="16dp"
                    android:onClick="SignupUser"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
